--- a/index.html
+++ b/index.html
@@ -133,24 +133,26 @@
       <div class="guide-step animate">
         <p class="step-number">1. Install Extension</p>
         <p>Open VS Code → Extensions (Ctrl+Shift+X) → Search 'Cline-AI' → Install</p>
-        <img src="https://code.visualstudio.com/assets/docs/editor/extension-gallery/extensions-view-icon.png" alt="Extensions Panel">
+        <img src="https://drive.google.com/file/d/1Ua-ZevQ-f68yXXtrgYr9hIP5IIa_I3TA/view?usp=sharing" alt="Extensions Panel">
       </div>
       <div class="guide-step animate">
         <p class="step-number">2. Open Cline Panel</p>
         <p>Click the Cline robot icon in the sidebar to access settings.</p>
-        <img src="https://via.placeholder.com/600x300.png?text=Cline+Settings+Panel" alt="Settings Panel">
+        <img src="https://drive.google.com/file/d/1fIc36D8T243kFYT6X1SuFFiCqomwTxO-/view?usp=sharing" alt="Settings Panel">
       </div>
       <div class="guide-step animate">
         <p class="step-number">3. Select API Provider</p>
+        <img src="https://drive.google.com/file/d/1sOqxkSmpZFNAMjwccUHZoDdbugkpoDFL/view?usp=sharing" alt="Settings Panel">
         <p>In API Configuration, choose <span class="highlight-text">Google Gemini</span> for free tier.</p>
       </div>
       <div class="guide-step animate">
         <p class="step-number">4. Obtain API Key</p>
         <p>Search 'Google Gemini API Key' → Google AI Studio → Create & copy your key.</p>
-        <img src="https://developers.google.com/static/ai/images/aistudio_get_api_key.png" alt="Get API Key">
+        <img src="https://drive.google.com/file/d/18b-m7Kgx3sgJRryek-dw8--JgjgNFTap/view?usp=sharing" alt="Get API Key">
       </div>
       <div class="guide-step animate">
         <p class="step-number">5. Configure in VS Code</p>
+        <img src="https://drive.google.com/file/d/1sOqxkSmpZFNAMjwccUHZoDdbugkpoDFL/view?usp=sharing" alt="Settings Panel">
         <p>Paste your key into the API field and select model <strong>gemini-2.0-flash-thinking-exp-1219</strong>.</p>
       </div>
       <div class="guide-step animate">
