--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
       <div class="guide-step animate">
         <p class="step-number">3. Select API Provider</p>
-        <img src="https://drive.google.com/file/d/1sOqxkSmpZFNAMjwccUHZoDdbugkpoDFL/view?usp=sharing" alt="Settings Panel">
+        <img src="https://drive.google.com/file/d/1sOqxkSmpZFNAMjwccUHZoDdbugkpoDFL/view?usp=sharing">
         <p>In API Configuration, choose <span class="highlight-text">Google Gemini</span> for free tier.</p>
       </div>
       <div class="guide-step animate">
