--- a/index.html
+++ b/index.html
@@ -274,4 +274,9 @@
     });
   </script>
 </body>
+
+  <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </html>
